--- a/site.yml
+++ b/site.yml
@@ -1,11 +1,15 @@
 ---
 # Kafka Playbook
 
-- hosts: kafka
+- hosts: all
   remote_user: ubuntu
   become: yes
   become_method: sudo
-
+  gather_facts: no
+  pre_tasks:
+    - name: 'install python2'
+      raw: sudo apt-get -y install python-simplejson
+      
   roles:
     - base
     - kafka
