--- a/site.yml
+++ b/site.yml
@@ -9,7 +9,8 @@
   pre_tasks:
     - name: 'install python2'
       raw: sudo apt-get -y install python-simplejson
-      
+
   roles:
     - base
+    - zookeeper
     - kafka
