ubuntu package name is zookeeperd

--- a/roles/zookeeper/tasks/main.yml
+++ b/roles/zookeeper/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Update repositories cache and install "zookeeper" package
   apt:
-    name: zookeeper
+    name: zookeeperd
 
 - name: copy zookeeper config
   template: src=zoo.cfg.j2 dest=/etc/zookeeper/conf/zoo.cfg owner=root
